Remove search services
